docs/mcp-security/envoy.yaml
static_resources:
  listeners:
  - name: mcp_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: mcp_ingress
          route_config:
            name: local_route
            virtual_hosts:
            - name: mcp_backend
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: mcp_api
                  request_headers_to_add:
                    - header:
                        key: "X-Envoy-Auth"
                        value: "${ENVOY_SHARED_SECRET}"
                      append_action: OVERWRITE_IF_EXISTS_OR_ADD
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                keycloak:
                  issuer: "http://localhost:8081/realms/ssc"
                  audiences:
                    - "ssc-mcp"
                  remote_jwks:
                    http_uri:
                      uri: "http://host.docker.internal:8081/realms/ssc/protocol/openid-connect/certs"
                      cluster: keycloak_jwks
                      timeout: 5s
                  forward: true
                  claim_to_headers:
                    - claim_name: "preferred_username"
                      header_name: "X-User"
                    - claim_name: "roles"
                      header_name: "X-Roles"
              rules:
                - match: { prefix: "/" }
                  requires:
                    provider_name: "keycloak"
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              grpc_service:
                envoy_grpc:
                  cluster_name: opa
                timeout: 2s
              failure_mode_allow: false
              with_request_body:
                max_request_bytes: 8192
                allow_partial_message: true
                pack_as_bytes: false
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: mcp_api
    connect_timeout: 2s
    type: STRICT_DNS
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: "/etc/envoy/certs/ca.pem"
          tls_certificates:
            - certificate_chain:
                filename: "/etc/envoy/certs/api.pem"
              private_key:
                filename: "/etc/envoy/certs/api-key.pem"
    load_assignment:
      cluster_name: mcp_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 127.0.0.1, port_value: 5001 }
  - name: opa
    connect_timeout: 2s
    type: STRICT_DNS
    load_assignment:
      cluster_name: opa
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 127.0.0.1, port_value: 9191 }
  - name: keycloak_jwks
    connect_timeout: 2s
    type: STRICT_DNS
    load_assignment:
      cluster_name: keycloak_jwks
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: host.docker.internal, port_value: 8081 }

admin:
  access_log_path: /tmp/envoy_admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
